/*
 * Copyright 2013 Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// Author: morlovich@google.com (Maksim Orlovich)

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package net_instaweb;

// This represents aggregated list of all selectors of the CSS that was needed
// to render the above-the-fold portion of a page.
//
// Next free id: 7
// TODO(jmaessen): Keep track of information on inputs to detect
// changes to HTML.  (CL in progress)
message CriticalSelectorSet {
  message BeaconResponse {
    repeated string selectors = 1;
  }
  // The SelectorSupport proto aggregates multiple selector returns in a
  // scalable way; support is exponentially decayed over time.
  message SelectorEvidence {
    optional string selector = 1 [default = ""];
    optional int32 support = 2 [default = 0];
  }
  // The PendingNonce proto describes the nonce of a beacon request that is
  // still valid (no response received, not timed out).  Note that these entries
  // might be cleared but left in place within the containing
  // CriticalSelectorSet when they expire or the corresponding beacon result
  // arrives.
  message PendingNonce {
    optional int64 timestamp_ms = 1 [default = 0];
    optional string nonce = 2 [default = ""];
  }

  // The set of all selectors that were guarding the CSS that got applied for
  // the above-the-fold portion of the webpage.
  //
  // Duplicates should not be included. In case of something using a
  // pseudo-element (e.g. foo::before), only the base portion should be
  // included.
  repeated string critical_selectors = 1;

  // Id 2 deleted, should not be reused.

  // Store a history of the last N reported critical selectors from beacons. The
  // critical_selectors field above will be recalculated when receiving and
  // storing a new critical image beacon response. It will be set to the union
  // of all critical selectors received so far.
  repeated BeaconResponse selector_set_history = 3;

  optional int64 next_beacon_timestamp_ms = 4 [default = 0];

  // This represents a serialized key/value map mapping selectors to support
  // for their criticality.  Support is added by beacon results, but decays
  // exponentially over time.
  repeated SelectorEvidence selector_evidence = 5;

  // This represents the valid beacon nonce values that will be accepted.
  repeated PendingNonce pending_nonce = 6;
}
